2010-05-18  Murray Cumming  <murrayc@murrayc.com>

    configure.ac: Remove check-news.

	* configure.ac: Remove the check-news option, because it makes it harder
    to regularly check that distcheck works.

2010-05-18  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* gtk/src/toolitem.hg: Remove include of now-removed header.

2010-05-18  Murray Cumming  <murrayc@murrayc.com>

	Restore many other changes from the gtkmm-3maybe branch.

	These were apparently lost during the git rebase. The ChangeLog
	entries seem to be correct, however.

2010-05-17  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filelist.am: Remove the mention of curve.hg and inputdialog.hg

2010-05-12  Murray Cumming  <murrayc@murrayc.com>

    Use gtk+ 3.0 instead of gtk+ 2.0.

	* configure.ac: Change the pkg-config check from gtk+-2.0 to gtk+-3.0.
    Change the gdkmm and gtkmm ABI version to 3.0, so people should change
    their pkg-config checks to gtkmm-3.0.
	* gtk/src/enums.hg: Remove GtkCurveType, which is not in gtk+ 3.0.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Remove previously-deprecated
    types that are not in gtk+ 3.0.

2010-01-05  Murray Cumming  <murrayc@murrayc.com>

	Remove more deprecated methods.

	* gtk/src/filelist.am:
	* gtk/src/curve.[hg|cc]:
	* gtk/src/inputdialog.[hg|ccg]: Removed deprecated classes.
	* gtk/gtkmm/border.h: Removed because this file is now generated.
	* gtk/src/toolbar: Inherit (and implement) from CellLayout.
	* gtk/src/button.hg, fixed.hg, recentmanager.hg, scalebutton.hg,
	toolbar.hg, treeview.hg, treeviewcolumn.hg, widget.hg:
	Removed deprecated methods, discovered by removing undefs.
	* gtk/src/celllayout.hg: Added get_first_cell() as a replacement for
	TreeViewColumng::get_first_cell().
	* gdk/src/event.hg:
	* gdk/src/pixbuf.hg:
	* gdk/src/window.hg:
	* gtk/src/aboutdialog.hg:
	* gtk/src/action.hg:
	* gtk/src/button.hg:
	* gtk/src/calendar.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellview.hg:
	* gtk/src/menuitem.hg: