@@ -59,7 +59,6 @@ public:
   _WRAP_METHOD(void set_metric(MetricType metric = PIXELS), gtk_ruler_set_metric)
 
   _WRAP_METHOD(MetricType get_metric() const, gtk_ruler_get_metric)
-  _WRAP_METHOD(MetricType get_metric(), gtk_ruler_get_metric, deprecated "Use the const version")
 
   /** sets the range of the ruler.
    * <i>upper</i> and <i>lower</i> arguments denote the extents of the Ruler.
