@@ -122,8 +122,6 @@ public:
   _IGNORE_SIGNAL("focus_home_or_end")
 
   //Ignore deprecated GtkToolbarAPI:
-  //Normally we just deprecate it in gtkmm too,
-  //but the GtkToolbar compatibility system is particularly unpleasant, so we just removed it in gtkmm 2.4. murrayc.
   _IGNORE(gtk_toolbar_append_item, gtk_toolbar_prepend_item, gtk_toolbar_insert_item, gtk_toolbar_insert_stock
           gtk_toolbar_append_space, gtk_toolbar_prepend_space, gtk_toolbar_insert_space, gtk_toolbar_remove_space
           gtk_toolbar_append_element, gtk_toolbar_prepend_element, gtk_toolbar_insert_element,
