@@ -1,5 +1,13 @@
 2010-05-18  Murray Cumming  <murrayc@murrayc.com>
 
+    Remove deprecated method and fix a wrong deprecation.
+
+	* gdk/gdkmm/general.h: Fix wrong merge (by me, weeks ago), which left
+    the undeprecated functions marked as deprecated.
+	* gtk/src/ruler.hg: Remove deprecated method overload.
+
+2010-05-18  Murray Cumming  <murrayc@murrayc.com>
+
     configure.ac: Remove check-news.
 
 	* configure.ac: Remove the check-news option, because it makes it harder
